--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <headr class="headr">
         <div class="container">
             <form class="form">
-                <input type="text" class="input" name="" id="">
-                <button type="submit">Search</button>
+                <input type="text" class="input" name="" id="" placeholder="Search cinema ...">
+                <button type="submit" class="submit-btn">Search</button>
             </form>
 
         </div>
@@ -31,8 +31,8 @@
                 <span class="cinema-list__item-year"></span>
             </li>
         </template>
-        <button class="prew-btn">Prew</button>
-        <button class="next-btn">Next</button>
+        <!-- <button class="prew-btn">Prew</button>
+        <button class="next-btn">Next</button> -->
 
     </div>
 
